# Multi-kind-Robot-system

./: CMakeLists.txt  README.md  package.xml
behavior_trees/: navigate_on_route_graph_w_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml  navigate_w_routing_global_planning_and_control_w_recovery.xml
config/: amcl_params.yaml  collision_monitor.yaml  dual_laser_merger.yaml  filter_info.yaml  multibot.rviz  my_controllers.yaml  nav2_params.yaml  nav2_params1.yaml  nav2_params2.yaml  robot2_amcl_params2.yaml  twist_mux.yaml
config/fleet/: robot1_fleet_config.yaml  robot2_fleet_config.yaml  robot3_fleet_config.yaml
config/zenoh/: nav2_bcrbot_zenoh_bridge_ros2dds_client_config.json5  nav2_unique_multi_bcrbot_zenoh_bridge_ros2dds_client_config.json5
launch/: bcr_bot_gazebo_spawn.launch.py  bringup_launch.py  collision_monitor_node.launch.py  costmap_filter_info.launch.py  demo_laser_merger.launch.py  gazebo.launch.py  localization.launch.py  nav2.launch.py  navigation.launch.py  online_async_launch.py  turtlebot3_world.launch.py
launch/fleet_launch/: multiple_bots_fleet_adapter.launch.xml  my_fleet.launch.xml  (+2 more)
maps/: bcr_map.yaml  hospital_map.pgm  hospital_map.yaml  new_map.building.yaml  new_map.pgm  new_map.yaml  new_office.building.yaml  new_warehouse.building.yaml  turtlebot3_world.yaml  warehouse.building.yaml
route_graphs/: hospital_route_updated.geojson  warehouse_route.geojson
rviz/: multibot.rviz
scripts/: collision_detector.py  controller_switch_node.py  geojson.py  goal_cancel_node.py  goal_relay.py  initial_pose_publisher.py  json_reverse_edge.py  multi_robot_obstacle_node.py  remapper.py  start_stop.py
worlds/: hospital.sdf  warehouse.world
(+14 files in other folders)
